syntax = "proto3";

package com.hashmapinc.tempus.edge.track.proto;

// Define byte values for describing tempus edge message protocols
enum MessageProtocols {
  UNDEFINED = 0;
  CONFIG =    1;
  DATA =      2;
}
